[package]
name = "icc-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pqcrypto-dilithium = "0.4.5"
pqcrypto-traits = "0.3.4"
iron = { git = "https://github.com/iron/iron" }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
base64 = "0.13.0"
bincode = "1.3.3"
sha2 ="0.10.2"
